# NS2

./: Makefile
headers/: ssh_proxy.h
pam-module/: pam_module.c
sample_ssh_server/: CMakeLists.txt  samplesshd-kbdint.c
spatch/: CMakeLists.txt  Makefile  README.md  unit_tests.bash
spatch/config/systemd/: spatch.service
spatch/documents/: technical_documentation.md  user_documentation.md
spatch/documents/diagrams/: Makefile  software_diagram.class.yuml.txt  virtual_testing_environment_diagram.yuml.txt
spatch/libssh_examples/: README.md  generate_host_keys.bash
spatch/packaging/: build.sh  control  copyright  install  postinst  postrm
spatch/source/: AccessListController.cpp  AccessListController.hpp  ConfigurationController.cpp  ConfigurationController.hpp  ConfigurationReader.cpp  ConfigurationReader.hpp  Endpoint.cpp  Endpoint.hpp  PseudoTerminal.cpp  PseudoTerminal.hpp  ServerConfiguration.cpp  ServerConfiguration.hpp  ServerController.cpp  ServerController.hpp  SshChannel.cpp  SshChannel.hpp  SshClient.cpp  SshClient.hpp  SshProxy.cpp  SshProxy.hpp  SshSession.cpp  SshSession.hpp  User.cpp  User.hpp  main.cpp
src/: 1  a.out  cli_ssh.cpp  config.ini  final_version.c  main.cpp  ssh_proxy.h  testing_main.c
src/final_version/: a.out  config.ini  final_version.c  parserConfig.c  ssh_proxy.h
ssh-client/: a.out  ssh-client.c
